--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.13"
   }
 }
